# rustography

./: Cargo.toml  README.md
src/: cli.rs  image_manipulator.rs  main.rs
