[package]
name = "rustography"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
cli-clipboard = "0.4.0"
image = "0.25.0"
serde = { version = "1.0.203", features = ["derive"] }
