[package]
name = "rustography"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = ["derive"] }
cli-clipboard = "0.4.0"
image = "0.25.0"
serde = { version = "1.0.203", features = ["derive"] }
